tests/integration/snapshots/integration__conformance__n_incomplete_null.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
[nul]
stdout --- 
<empty>
stderr --- 
error: unexpected character `n`. expected start of a json value
 --> stdin:1:2
  |
1 | [nul]
  |  ^
